--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nodemon": "^2.0.2"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
   }
 }
