--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "stripe": "^8.0.1"
   },
   "devDependencies": {
