--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
+    "mongoose-findorcreate": "^3.0.0",
     "stripe": "^8.0.1"
   },
   "devDependencies": {
