--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "mongoose-findorcreate": "^3.0.0",
-    "stripe": "^8.0.1"
+    "stripe": "^8.0.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
