--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install & node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,6 @@
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.2"
   },
   "engines": {
