--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install & node server.js"
+    "start": "npm install && nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "stripe": "^8.0.1"
   },
   "devDependencies": {
+    "mongodb": "^3.5.3",
     "nodemon": "^2.0.2"
   },
   "engines": {
