changed connection options to keep connection alive

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECTION=mongodb+srv://jaybenaim:Jb100831792@clusterisell2-rwftm.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://jaybenaim:Jb100831792@clusterisell2-rwftm.mongodb.net/test?keepAlive=true&poolSize=30&autoReconnect=true&socketTimeoutMS=360000&connectTimeoutMS=360000
 SECRET=greybottles
