--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "mongoose-findorcreate": "^3.0.0",
+    "react-fontawesome": "^1.7.1",
     "stripe": "^8.0.1"
   },
   "devDependencies": {
