--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "mongoose-findorcreate": "^3.0.0",
+    "morgan": "^1.10.0",
     "react-fontawesome": "^1.7.1",
     "stripe": "^8.0.1"
   },
